[project]
name = "astra"
version = "0.1.0"
description = "Astronomical spectroscopy analysis toolbox"
readme = "README.md"
authors = [
	{ name = "Jordan A. Simpson" }
]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = [
	"astronomy",
	"fitting"
]
dependencies = [
	"numpy>=1.23.0",
	"scipy>=1.9.0",
	"matplotlib>=3.5.0",
	"numba>=0.56.0",
	"emcee>=3.0.0",
	"corner>=2.0.0"
]

[project.urls]
repository = "https://github.com/jsimpson-astro/astra"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
